# package-monitor

./: .env.example  .gitignore  .rsync-exclude  AGENTS.md  Makefile  README.md  TODO - k2.5.md  TODO.md  config.yaml  pyproject.toml
developer/: _tmp_opencode_test.py
package-monitor/: README.md
package-monitor/src/scm/: cli.py  config.py  extractor.py  models.py
package-monitor/src/scm/collectors/: __init__.py  npm.py  pypi.py
package-monitor/src/scm/dashboard/: __init__.py  app.py  scanner.py
package-monitor/src/scm/devtools/: graph.py
package-monitor/tests/: test_db.py  test_orchestrator.py
package-monitor/tests/fixtures/: npm_changes.json  sample_diff_malicious.md
package-monitor/tests/test_collectors/: test_npm.py  test_pypi.py
package-monitor/tests/test_dashboard/: __init__.py  test_app.py  test_queries.py  test_scanner.py
package-monitor/tests/test_notifiers/: test_local.py  test_twitter.py
src/scm/: __init__.py  analyzer.py  backfill_metadata.py  cli.py  config.py  db.py  models.py  orchestrator.py  plugins.py  scheduler.py  storage.py
src/scm/collectors/: __init__.py  npm.py  pypi.py
src/scm/dashboard/: app.py  queries.py  scanner.py  url_parser.py
src/scm/devtools/: __init__.py  complex.py  lint.py  typecheck.py
src/scm/notifiers/: __init__.py  local.py  twitter.py
src/scm/scanners/: __init__.py  base64_strings.py  binary_strings.py  diff.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_db.py  test_extractor.py  test_models.py  test_orchestrator.py  test_plugins.py  test_scanners.py  test_scheduler.py  test_storage.py
tests/fixtures/: sample_diff_benign.md
tests/test_collectors/: test_npm.py  test_pypi.py
tests/test_dashboard/: test_app.py  test_queries.py  test_scanner.py  test_url_parser.py
tests/test_notifiers/: test_local.py  test_twitter.py
(+14 files in other folders)
